# Mandelbrot-set

./: CMakeLists.txt  README.md
mandelbrot/include/: mandelbrot.h  mandelbrot_fast.h
mandelbrot/src/: mandelbrot.cpp  mandelbrot_fast.cpp  mandelbrot_multiprecision.cpp
perf_test/include/: cli_table.h
perf_test/src/: perf_test.cpp
perturbation_mandelbrot/include/: kernel.h  mandelbrot_perturb.h
perturbation_mandelbrot/src/: kernel.cu  main_gpu.cpp
ppmlib/: ppmlib.h
ppmlib/example/: gradient.cpp
ppmlib/include/: ppmlib.h
shaders/include/: shaders.h
shaders/src/: shaders.cpp
